--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,12 @@ dependencies:
   intl: ^0.17.0-nullsafety.2
   google_maps_flutter: ^2.1.0
   geo: ^0.3.0
+  connectivity: ^3.0.6
+  firebase_core: ^1.8.0
+  firebase_crashlytics: ^2.2.4
+  fluttertoast: ^8.0.8
+  permission_handler: ^8.3.0
+  url_launcher: ^6.0.9
 
 dev_dependencies:
   lints: ^1.0.0
