--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,12 @@ dependencies:
   geo: ^0.3.0
   connectivity: ^3.0.6
   firebase_core: ^1.8.0
+  firebase_analytics: ^8.3.4
   firebase_crashlytics: ^2.2.4
   fluttertoast: ^8.0.8
   permission_handler: ^8.3.0
   url_launcher: ^6.0.9
+  tuple: ^2.0.0
 
 dev_dependencies:
   lints: ^1.0.0
