--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,15 @@ dependencies:
   firebase_core: ^1.8.0
   firebase_analytics: ^8.3.4
   firebase_crashlytics: ^2.2.4
+  firebase_messaging: ^10.0.4
+  flutter_local_notifications: ^8.0.0
   fluttertoast: ^8.0.8
   flutter_localizations:
     sdk: flutter
   permission_handler: ^8.3.0
   url_launcher: ^6.0.9
   tuple: ^2.0.0
+  rxdart: ^0.27.2
 
 dev_dependencies:
   lints: ^1.0.0
