--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,11 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   permission_handler: ^8.3.0
-  url_launcher: ^6.0.9
-  tuple: ^2.0.0
+  pull_to_refresh: ^2.0.0
   rxdart: ^0.27.2
+  shimmer: ^2.0.0
+  tuple: ^2.0.0
+  url_launcher: ^6.0.9
 
 dev_dependencies:
   lints: ^1.0.0
