--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,16 +11,19 @@ dependencies:
   intl: ^0.17.0-nullsafety.2
   google_maps_flutter: ^2.1.0
   geo: ^0.3.0
+  cached_network_image: ^3.1.0
   connectivity: ^3.0.6
   firebase_core: ^1.8.0
   firebase_analytics: ^8.3.4
   firebase_crashlytics: ^2.2.4
   firebase_messaging: ^10.0.4
+  flutter_cache_manager: ^3.1.2
   flutter_local_notifications: ^8.0.0
   fluttertoast: ^8.0.8
   flutter_localizations:
     sdk: flutter
   permission_handler: ^8.3.0
+  photo_view: ^0.12.0
   pull_to_refresh: ^2.0.0
   rxdart: ^0.27.2
   shimmer: ^2.0.0
