--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
     sdk: flutter
   intl: ^0.17.0-nullsafety.2
   cached_network_image: ^3.2.0
-  connectivity: ^3.0.6
+  connectivity_plus: ^2.3.0
   collection: ^1.16.0
   crypto: ^3.0.2
   firebase_core: ^1.16.0
