--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,17 +3,12 @@ description: A starting point for Dart libraries or applications.
 version: 1.0.14
 
 environment:
-  sdk: '>=2.17.0 <3.0.0'
+  sdk: '>=2.14.4 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  ## Waiting for merge
-  cached_network_image:
-    git:
-      url: https://github.com/johnpryan/flutter_cached_network_image.git
-      ref: flutter-beta
-      path: cached_network_image
+  cached_network_image: ^3.2.0
   connectivity_plus: ^2.3.0
   collection: ^1.16.0
   crypto: ^3.0.1
@@ -32,17 +27,14 @@ dependencies:
   intl: ^0.17.0-nullsafety.2
   permission_handler: ^9.2.0
   photo_view: ^0.12.0
-  pull_to_refresh:
-    git:
-      url: https://github.com/miquelbeltran/flutter_pulltorefresh.git
-      ref: master
+  pull_to_refresh: ^2.0.0
   rxdart: ^0.27.3
   shimmer: ^2.0.0
   tuple: ^2.0.0
   url_launcher: ^6.1.2
 
 dev_dependencies:
-  lints: ^2.0.0
+  flutter_lints: ^2.0.1
   test: ^1.21.1
 
 # Use to generate translations to create CurrentLocalisationDelegate
