--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: mci_flutter_lib
 description: A starting point for Dart libraries or applications.
-version: 1.0.16
+version: 1.0.17
 
 environment:
-  sdk: '>=2.14.4 <3.0.0'
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   flutter:
