--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: mci_flutter_lib
 description: A starting point for Dart libraries or applications.
-version: 1.0.17
+version: 1.0.18
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -11,6 +11,7 @@ dependencies:
   cached_network_image: ^3.2.1
   connectivity_plus: ^2.3.0
   collection: ^1.16.0
+  cross_file: ^0.3.3
   crypto: ^3.0.1
   firebase_analytics: ^9.1.7
   firebase_core: ^1.16.0
