--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: mci_flutter_lib
 description: A starting point for Dart libraries or applications.
-version: 1.0.19
+version: 1.0.20
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -13,6 +13,7 @@ dependencies:
   collection: ^1.16.0
   cross_file: ^0.3.3
   crypto: ^3.0.1
+  equatable: ^2.0.0
   firebase_analytics: ^9.1.7
   firebase_core: ^1.16.0
   firebase_crashlytics: ^2.7.2
@@ -26,6 +27,7 @@ dependencies:
   google_maps_flutter: ^2.1.5
   http: ^0.13.4
   intl: ^0.17.0-nullsafety.2
+  maps_toolkit: ^2.0.0
   permission_handler: ^9.2.0
   photo_view: ^0.12.0
   pull_to_refresh: ^2.0.0
