--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: mci_flutter_lib
 description: A starting point for Dart libraries or applications.
-version: 1.1.0
+version: 1.2.0
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -18,6 +18,7 @@ dependencies:
   firebase_core: ^1.16.0
   firebase_crashlytics: ^2.7.2
   firebase_messaging: ^11.3.0
+  flutter_bloc: ^8.0.1
   flutter_cache_manager: ^3.3.0
   flutter_localizations:
     sdk: flutter
